API_Kube/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aaron-final-api
  namespace: aaron-final
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aaron-final-api
  strategy:
   type: RollingUpdate
   rollingUpdate:
    maxSurge: 1
    maxUnavailable: 0
  template:
    metadata:
      labels:
        app: aaron-final-api
    spec:
      containers:
      - name: aaron-final-api
        image: ${DOCKER_USER}/aaron-final-api:${IMAGE_TAG}
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
