API_Kube/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: recipie-api-service
  namespace: aaron-final
spec:
  selector:
    app: aaron-final-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
